clean up, bug fix, plus styling for not found page

--- a/src/components/TechieCard/TechieCard.css
+++ b/src/components/TechieCard/TechieCard.css
@@ -46,7 +46,7 @@
   visibility: hidden;
 }
 
-.card-carousel > div:not([class]) {
+.notFoundCard {
   background-color: #ffffff;
   box-shadow: 0 10px 5px rgb(0 0 0 / 10%);
   border: 1px solid #eeeeee;
@@ -55,11 +55,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .card,
 .right-arrow,
 .noOfHits,
-.card-carousel > div:not([class]) {
+.notFoundCard {
   top: var(--top, 0);
   bottom: var(--bottom, 0);
   margin: auto;
@@ -79,6 +80,12 @@
   font-style: italic;
   color: gray;
   --left: 26rem;
+}
+
+.no-result {
+  font-weight: bolder;
+  color: #850000;
+  font-size: 20px;
 }
 
 mark {
