remove number of hits after 768px

--- a/src/components/TechieCard/TechieCard.css
+++ b/src/components/TechieCard/TechieCard.css
@@ -95,6 +95,6 @@ mark {
 /** Media Queries **/
 @media only screen and (max-width:768px) {
   .noOfHits {
-    --top: 63em;
+    display: none;
   }
 }
